k8s/ingress/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: jausathe-ingress
  namespace: jausathe-namespace

spec:
  rules:
    - http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 5473
